--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,6 @@
 @import 'tailwindcss';
-
-/* https://fontsource.org/fonts/jetbrains-mono/install */
-/* jetbrains-mono-latin-wght-normal */
-@font-face {
-  font-family: 'JetBrains Mono Variable';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 100 800;
-  src: url(@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2)
-    format('woff2-variations');
-  unicode-range:
-    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308,
-    U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import '@fontsource-variable/roboto-mono';
+@import '@fontsource-variable/jetbrains-mono';
 
 @theme {
   --color-accent: var(--theme-accent);
@@ -39,6 +27,7 @@
   --color-magenta: var(--theme-magenta);
   --color-cyan: var(--theme-cyan);
   --default-font-family: var(--theme-font), monospace;
+  --font-mono: 'JetBrains Mono Variable', 'Ubuntu Mono', 'Consolas', monospace;
 }
 
 header {
